--- a/firmware/application/CMakeLists.txt
+++ b/firmware/application/CMakeLists.txt
@@ -143,6 +143,7 @@ set(CPPSRC
 	${COMMON}/portapack_io.cpp
 	${COMMON}/portapack_persistent_memory.cpp
 	${COMMON}/portapack_shared_memory.cpp
+	${COMMON}/secplus_packet.cpp
 	${COMMON}/sonde_packet.cpp
 	# ${COMMON}/test_packet.cpp
 	${COMMON}/tpms_packet.cpp
@@ -250,6 +251,7 @@ set(CPPSRC
 	apps/ui_whipcalc.cpp
 	apps/acars_app.cpp
 	apps/ais_app.cpp
+	apps/secplus_rx.cpp
 	apps/analog_audio_app.cpp
 	apps/capture_app.cpp
 	apps/ert_app.cpp
