--- a/firmware/baseband/CMakeLists.txt
+++ b/firmware/baseband/CMakeLists.txt
@@ -417,6 +417,13 @@ set(MODE_CPPSRC
 )
 DeclareTargets(PREP replay)
 
+### SECPLUS RX
+
+set(MODE_CPPSRC
+	proc_secplus.cpp
+)
+DeclareTargets(PSEC secplus)
+
 ### Signal generator
 
 set(MODE_CPPSRC
